[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/Main_options.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/m5x7_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/OptionsToggle.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/m5x7_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://GUI/OptionsSlider.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/ControlsButtons.tscn" type="PackedScene" id=7]

[node name="MainOptions" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Main_Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="Panel" parent="Main_Options"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="Main_Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Main" type="VBoxContainer" parent="Main_Options/Margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0

[node name="HBoxContainer" type="HBoxContainer" parent="Main_Options/Margin/Main"]
margin_right = 304.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 106 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Main_Options/Margin/Main/HBoxContainer"]
margin_right = 150.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Options/Margin/Main/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SectionTitle" type="Label" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer"]
margin_right = 150.0
margin_bottom = 26.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Resolution"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer"]
margin_top = 30.0
margin_right = 150.0
margin_bottom = 106.0
size_flags_vertical = 3

[node name="Resolution" type="VBoxContainer" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 76.0
size_flags_vertical = 3

[node name="Fullscreen" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution" instance=ExtResource( 3 )]

[node name="Borderless" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution" instance=ExtResource( 3 )]
margin_top = 28.0
margin_bottom = 52.0
text = "Borderless"

[node name="Scale" type="HBoxContainer" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution"]
margin_top = 56.0
margin_right = 94.0
margin_bottom = 76.0
size_flags_vertical = 3

[node name="ScaleDown" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale" instance=ExtResource( 4 )]
editor/display_folded = true
margin_top = 2.0
margin_right = 16.0
margin_bottom = 18.0

[node name="Label" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale/ScaleDown" index="0"]
text = "-"

[node name="ScaleName" type="Label" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale"]
margin_left = 20.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 16.0
rect_min_size = Vector2( 48, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
text = "Scale"
align = 1

[node name="ScaleUp" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale" instance=ExtResource( 4 )]
margin_left = 72.0
margin_top = 2.0
margin_right = 88.0
margin_bottom = 18.0

[node name="Margin" type="Control" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale"]
margin_left = 92.0
margin_right = 92.0
margin_bottom = 20.0

[node name="Margin" type="Control" parent="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 150.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="Main_Options/Margin/Main/HBoxContainer"]
editor/display_folded = true
margin_left = 154.0
margin_right = 304.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Options/Margin/Main/HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SectionTitle" type="Label" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer"]
margin_right = 150.0
margin_bottom = 26.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Volume"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer"]
margin_top = 30.0
margin_right = 150.0
margin_bottom = 77.0

[node name="Resolution" type="VBoxContainer" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_right = 150.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="Master" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution" instance=ExtResource( 6 )]
margin_right = 150.0
size_flags_horizontal = 3

[node name="HSlider" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Master" index="1"]
margin_right = 150.0

[node name="Music" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution" instance=ExtResource( 6 )]
margin_top = 17.0
margin_right = 150.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="ScaleName" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Music" index="0"]
text = "Music"

[node name="HSlider" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Music" index="1"]
margin_right = 150.0

[node name="AudioStreamPlayer" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Music" index="2"]
bus = "Music"

[node name="SFX" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution" instance=ExtResource( 6 )]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="ScaleName" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/SFX" index="0"]
text = "SFX"

[node name="HSlider" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/SFX" index="1"]
margin_right = 150.0

[node name="AudioStreamPlayer" parent="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/SFX" index="2"]
bus = "SFX"

[node name="ControlsSection" type="CenterContainer" parent="Main_Options/Margin/Main"]
margin_top = 110.0
margin_right = 304.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controls" type="Button" parent="Main_Options/Margin/Main/ControlsSection"]
margin_left = 124.0
margin_top = 6.0
margin_right = 179.0
margin_bottom = 25.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Controls"

[node name="BackCenter" type="CenterContainer" parent="Main_Options/Margin/Main"]
margin_top = 145.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="Back" type="Button" parent="Main_Options/Margin/Main/BackCenter"]
margin_left = 134.0
margin_right = 170.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 5 )
text = "BACK"

[node name="Controls" type="VBoxContainer" parent="Main_Options/Margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0

[node name="Section" type="Control" parent="Main_Options/Margin/Controls"]
margin_right = 304.0
margin_bottom = 141.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Main_Options/Margin/Controls/Section"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="Main_Options/Margin/Controls/Section/HBoxContainer"]
editor/display_folded = true
margin_right = 304.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="ButtonList" type="VBoxContainer" parent="Main_Options/Margin/Controls/Section/HBoxContainer/ScrollContainer"]
margin_right = 304.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlsButtons" parent="Main_Options/Margin/Controls/Section/HBoxContainer/ScrollContainer/ButtonList" instance=ExtResource( 7 )]
visible = false

[node name="Margin" type="Control" parent="Main_Options/Margin/Controls/Section/HBoxContainer"]
visible = false
margin_left = 4.0
margin_right = 1160.0
margin_bottom = 576.0
size_flags_horizontal = 3

[node name="BackCenter" type="CenterContainer" parent="Main_Options/Margin/Controls"]
margin_top = 145.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="ControlsBack" type="Button" parent="Main_Options/Margin/Controls/BackCenter"]
margin_left = 134.0
margin_right = 170.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 5 )
text = "BACK"
[connection signal="pressed" from="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Borderless" to="." method="_on_Borderless_pressed"]
[connection signal="pressed" from="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale/ScaleDown" to="." method="_on_ScaleDown_pressed"]
[connection signal="pressed" from="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale/ScaleUp" to="." method="_on_ScaleUp_pressed"]
[connection signal="value_changed" from="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Master/HSlider" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Music/HSlider" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/SFX/HSlider" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="Main_Options/Margin/Main/ControlsSection/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Main_Options/Margin/Main/BackCenter/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Main_Options/Margin/Controls/BackCenter/ControlsBack" to="." method="_on_ControlsBack_pressed"]

[editable path="Main_Options/Margin/Main/HBoxContainer/Panel/VBoxContainer/HBoxContainer/Resolution/Scale/ScaleDown"]

[editable path="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Master"]

[editable path="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/Music"]

[editable path="Main_Options/Margin/Main/HBoxContainer/Panel2/VBoxContainer/HBoxContainer/Resolution/SFX"]
